# prop-pricecheck

./: .editorconfig  .gcloudignore  .gitignore  Pipfile  README.md  deploy.sh  deploy_gcloud.sh  deploy_netlify.sh  docker-compose.yml  env-example  main.py  populate_db.sh  pre_deploy.sh  run_local.sh  run_server.sh  server.py  setup.py  town_geo.json  update_db.sh
app-server/: env-example  package-lock.json  package.json  pre_deploy.sh  pyproject.toml  webpack.config.js
app-server/app_server/: __init__.py  cli.py  local.py  models.py  shell.py
app-server/app_server/data/: town_geo.json
app-server/app_server/scripts/: csv_to_pandas.py  csv_to_sql.py  generate_static.py  pre_deploy_netlify.sh  shell.py  towns.py
app-server/app_server/src/: form.js  index.js
app-server/app_server/static/: form.js
app-server/app_server/templates/: index.html
gc-form/: env-example  pre_deploy.sh  pyproject.toml
gc-form/gc_form/: .gcloudignore  env-yaml-example  error_handling.py  main.py  requirements.txt
gc-form/gc_form/mongo/: instance.py  listing.py  maps.py
migrations/versions/: 1e2230b27d7d_.py  556155e95710_.py  ba8720d0560f_.py  c3b2e96da0c0_.py  d6b45c4bd2a7_.py
price_app/: __init__.py  cli.py  database.py  local.py  models.py
price_app/api/: form.py
price_app/api/form/: __init__.py
price_app/gcloud/: main.py
price_app/scripts/: csv_to_pandas.py  csv_to_sql.py  generate_static.py  listing.py  maps.py  pre_deploy_netlify.sh  process_csv.py  shell.py
price_app/static/: app.css  app.js  form.js
price_app/templates/: index.html
templates/: index.html
