[tool.poetry]
name = "app-server"
version = "0.1.0"
description = ""
authors = ["Soung Rong <soung@soungrong.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
frozen-flask = "^0.15.0"
python-dotenv = "^0.10.3"
pandas = "^0.25.1"
googlemaps = "^3.1"
flask-migrate = {version = "^2.5", optional = true}
flask-sqlalchemy = {version = "^2.4", optional = true}
gc-form = {path = "../gc-form"}

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
ipython = "^7.7"
jupyter = "^1.0"

[tool.poetry.scripts]
generate-static = "app_server.scripts.generate_static:main"
shell = "app_server.scripts.shell:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
