[tool.poetry]
name = "gc-form"
version = "0.1.0"
description = ""
authors = ["Soung Rong <soung@soungrong.com>"]

[tool.poetry.dependencies]
python = "^3.7"
google-cloud-error-reporting = "^0.32.1"
pymongo = "^3.9"
voluptuous = "^0.11.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
