[tool.poetry]
name = "gc-form"
version = "0.1.0"
description = ""
authors = ["Soung Rong <soung@soungrong.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
google-cloud-error-reporting = "^0.32.1"
pymongo = {version = "^3.9", extras = ["tls"]}
voluptuous = "^0.11.7"

[tool.poetry.dev-dependencies]

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "pip", path = "./gc_form/requirements.txt"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
